force-app/main/default/objects/Qb_Token__c/Qb_Token__c.object-meta.xml
<CustomObject>
    <description>Stores information for Quickbooks Tokens here</description>
    <label>Qb Token</label>
    <nameField>
        <displayFormat>QBT-{0000000000}</displayFormat>
        <label>Qb Token Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QbTokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>