force-app/main/default/objects/Qb_Token__c/fields/Access_Code_Life_Span_Days__c.field-meta.xml
<CustomField>
    <fullName>Access_Code_Life_Span_Days__c</fullName>
    <description>Number of days our access code is valid for. Ideally should be 100 days</description>
    <label>Access Code Life Span (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>