force-app/main/default/objects/Qb_Token__c/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <description>Access Token for requesting JWTs</description>
    <label>Auth Token</label>
    <length>200</length>
    <type>Text</type>
</CustomField>