force-app/main/default/objects/Qb_Token__c/fields/Jwt_Token_LifeSpan_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Jwt_Token_LifeSpan_Minutes__c</fullName>
    <description>How many minutes does our jwt token last</description>
    <label>Jwt Token LifeSpan Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>