force-app/main/default/objects/Qb_Token__c/fields/Last_Auth_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Auth_Date__c</fullName>
    <description>Last time we requested for authentication.</description>
    <label>Last Auth Date</label>
    <type>DateTime</type>
</CustomField>