force-app/main/default/objects/Qb_Token__c/fields/Realm_Id__c.field-meta.xml
<CustomField>
    <fullName>Realm_Id__c</fullName>
    <description>Realm Id for this token</description>
    <label>Realm Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>