force-app/main/default/objects/Qb_Token__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <description>Refresh Token</description>
    <label>Refresh Token</label>
    <length>200</length>
    <type>Text</type>
</CustomField>