force-app/main/default/objects/Qb_Token__c/fields/Refresh_Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token_Expiry__c</fullName>
    <label>Refresh Token Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>